<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_compat_inset_shadow"
        android:alpha="0.9">

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cardview_compat_inset_shadow">

            <TextView
                android:id="@+id/textViewHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/featuredViewHead"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/featuredheading"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:layout_marginBottom="10dp"
                android:id="@+id/comicButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/comicRecommend"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <Button
                android:layout_marginBottom="10dp"
                android:id="@+id/trivia"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/triviabutton"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>